traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: value unary_! is not a member of Unit
  while(!posFinale()) {
        ^Snake:10: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if(!estFaceMur) return(false)
                         ^Snake:10: warning: enclosing method posFinale has result type Unit: return value discarded
  if(!estFaceMur) return(false)
                  ^Snake:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    if(estFaceMur) return(true)}
                          ^Snake:13: warning: enclosing method posFinale has result type Unit: return value discarded
    if(estFaceMur) return(true)}
                   ^Snake:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    if(estFaceMur) return(true)}
                          ^Snake:17: warning: enclosing method posFinale has result type Unit: return value discarded
    if(estFaceMur) return(true)}
                   ^Snake:18: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return(false)
         ^Snake:18: warning: enclosing method posFinale has result type Unit: return value discarded
  return(false)
  ^